Updates on Service Page

--- a/elements.html
+++ b/elements.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Standout by Pixelarity
-	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Nai'allure Beauty - Beautician in Milwaukee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,18 +12,18 @@
 	<body class="is-preload">
 
 		<!-- Page wrapper -->
-			<div id="page-wrapper">
+			<div id="page-wrapper" style="background-color: pink !important;">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header" class="alt" style="background-color: #ffcce6 !important;">
 						<span class="logo"><a href="index.html">Nai'Allure Beauty <span>by Ameera</span></a></span>
 						<a href="#menu"><span>Menu</span></a>
 					</header>
 
 				<!-- Nav -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
+					<nav id="menu" style="background-color: pink !important;">
+						<div class="inner" style="">
+							<h2 style="">Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="services.html">Services</a></li>
